# VaniraTTS

./: README.md  pyproject.toml
VaniraTTS/: __init__.py  tts.py  vocab.json
VaniraTTS/text/: dict_transliteration.txt  eng2tha.py
